layout bugs

--- a/treinamento-ebm/style.css
+++ b/treinamento-ebm/style.css
@@ -78,7 +78,6 @@ header {
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
     cursor: pointer;
     transition: background-color 0.3s, box-shadow 0.3s;
-    font-family: 'Cormorant Garamond', serif;
     text-align: center;
 }
 
@@ -88,11 +87,12 @@ header {
 }
 
 .button a {
+    font-family: 'Cormorant Garamond', serif;
     font-weight: bold;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 20px;
+    font-size: 15px;
     color: #333;
+    text-transform: uppercase;
+    text-decoration: none;
 }
 
 .highlight {
@@ -119,8 +119,9 @@ header {
 }
 
 .highlight_title {
-    width: 500px;
+    width: 550px;
     padding: 50px 20px;
+    font-family: 'Playfair Display', serif;
 }
 
 .highlight_title p {
@@ -134,8 +135,8 @@ header {
 }
 
 .highlight_content {
-    width: 370px;
-    padding: 50px 20px;    
+    width: 400px;
+    padding: 50px 30px;    
 }
 
 .highlight_content p {
@@ -162,6 +163,7 @@ header {
     font-weight: 400;
     font-size: 90px;
     text-align: center;
+    font-family: 'Playfair Display', serif;
 }
 
 .liberty_title span {
@@ -192,16 +194,17 @@ header {
 }
 
 .course_content_title h1 {
-    font-size: 90px;
+    font-size: 70px;
     font-weight: 400;
     text-align: center;
+    font-family: 'Playfair Display', serif;
 }
 
 .course_content_items {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 20px;
+    gap: 40px;
     max-width: 1000px;
     margin: auto;
     padding-bottom: 50px;
@@ -209,13 +212,14 @@ header {
 
 .course_content_items img {
     border-radius: 20px;
-    width: 450px;
+    width: 400px;
 }
 
 .bonus {
     background-color: #303f3c;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .bonus_title {
@@ -225,6 +229,7 @@ header {
 .bonus_title h1 {
     font-size: 60px;
     font-weight: lighter;
+    font-family: 'Playfair Display', serif;
 }
 
 .bonus_title p {
@@ -267,6 +272,7 @@ header {
     font-size: 90px;
     font-weight: 400;
     margin-top: 20px;
+    font-family: 'Playfair Display', serif;
 }
 
 .ckeckout_head p {
